<resources>
    <string name="app_name">Squats Analysis App</string>
    <string name="exercise">Exercise</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="permission">Permission</string>
    <string name="set_an_alarm">Set a Reminder!</string>
    <string name="date">Date</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="time">Time</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="schedule_details">Schedule details…</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="set_a_daily_reminder">Set a Daily Reminder!</string>
    <string name="daily_time">Daily time</string>
    <string name="daily_details">Daily details</string>
    <string name="set_daily_alarm">Set Daily</string>
    <string name="detection_threshold">Detection Threshold</string>
    <string name="tracking_threshold">Tracking Threshold</string>
    <string name="presence_threshold">Presence Threshold</string>
    <string name="delegate">Delegate</string>
    <string name="camera">Camera</string>
    <string name="inference_time">Inference Time: %s ms</string>
    <string name="feedback">Feedback: %s</string>
    <string name="state">State: %s</string>
    <string name="incorrect_squats">Incorrect Squats: %s</string>
    <string name="correct_squats">Correct Squats: %s</string>
    <string name="lower_your_hips">Lower your hips</string>
    <string name="reset">Reset</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string-array name="camera_spinner_titles">
        <item>Front Camera</item>
        <item>Back Camera</item>
    </string-array>

</resources>