<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.schedule.ScheduleFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/set_an_alarm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_schedule_date"
            style="@style/Base.Widget.Appcompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_24"
            android:contentDescription="@string/date" />

        <TextView
            android:id="@+id/tv_schedule_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/schedule_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_schedule_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_schedule_24"
            android:contentDescription="@string/time" />

        <TextView
            android:id="@+id/tv_schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/schedule_time" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_schedule_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/schedule_details"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_set_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_schedule" />
</androidx.appcompat.widget.LinearLayoutCompat>