<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/detection_threshold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_remove_24"/>

                <TextView
                    android:id="@+id/detection_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:minEms="3"
                    android:textSize="16sp"
                    tools:text="0.50"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_add_24"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tracking_threshold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_remove_24"/>

                <TextView
                    android:id="@+id/tracking_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:minEms="3"
                    android:textSize="16sp"
                    tools:text="0.50"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_add_24"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/presence_threshold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_remove_24"/>

                <TextView
                    android:id="@+id/presence_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="center"
                    android:minEms="3"
                    android:textSize="16sp"
                    tools:text="0.50"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_add_24"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/delegate" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="160dp"
                android:spinnerMode="dropdown" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/camera" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/camera_spinner_titles"
                android:minWidth="160dp"
                android:spinnerMode="dropdown" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>